# cuw

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/usage-core/: Cargo.toml
crates/usage-core/examples/: snapshot.rs
crates/usage-core/src/: collector.rs  config.rs  lib.rs  model.rs  stats_cache.rs  statusline_cmd.rs  timeutil.rs
crates/usage-core/src/sources/: jsonl.rs  mod.rs  oauth.rs  statusline.rs
crates/usage-widget/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
crates/usage-widget/src/: main.rs
crates/usage-widget/src/ui/: mod.rs  theme.rs
crates/usage-widget/src/win/: autostart.rs  backdrop.rs  mod.rs  topmost.rs
docs/: glass-backdrop-research.md
docs/superpowers/plans/: 2026-06-08-claude-usage-widget-plan.md
docs/superpowers/specs/: 2026-06-08-claude-usage-widget-design.md
scripts/: build-widget.ps1
tools/: README.md
tools/glass-capture/: Cargo.toml
tools/glass-capture/src/: main.rs
tools/icongen/: Cargo.toml
tools/icongen/src/: main.rs
