# claude-usage-widget — the gpui GUI shell.
#
# Build requirements (Windows):
#   * Rust 1.96.0   (pinned in ../../rust-toolchain.toml; gpui needs std::hint::cold_path)
#   * CMake on PATH (gpui builds native deps with it; bundled with VS 2022)
#   * MSVC "Desktop development with C++"
#
# The gpui git deps are pinned to exact revs below (and in Cargo.lock) for
# reproducible builds. Bump them deliberately, never via `cargo update`.

[package]
name = "claude-usage-widget"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "claude-usage-widget"
path = "src/main.rs"

[dependencies]
usage-core = { path = "../usage-core", features = ["net"] }
anyhow = "1"
smol = "2"

# Pinned to exact revs for reproducible builds (also locked in Cargo.lock).
gpui = { git = "https://github.com/zed-industries/zed", rev = "f99fe5d8c2a0bc40375d79bfc09dfa583f421797" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "f99fe5d8c2a0bc40375d79bfc09dfa583f421797", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "06be7113c715bdeba17cb278fefd1175eb1781e2" }

raw-window-handle = "0.6"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
] }

[build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = "s"   # optimize for size
lto = true        # whole-program; smaller (slower build)
strip = true      # drop symbols
codegen-units = 1 # better cross-module size optimization
