# claude-usage-widget — the gpui GUI shell.
#
# Build requirements (Windows):
#   * Rust 1.96.0   (pinned in ../../rust-toolchain.toml; gpui needs std::hint::cold_path)
#   * CMake on PATH (gpui builds native deps with it; bundled with VS 2022)
#   * MSVC "Desktop development with C++"
#
# The gpui git deps intentionally omit `rev`: gpui-component depends on the
# same Zed repo without `rev`, and Cargo treats `zed#sha` and `zed?rev=sha#sha`
# as distinct sources. Reproducibility comes from the committed Cargo.lock; use
# `--locked` in checks/builds and bump deliberately, never via `cargo update`.

[package]
name = "claude-usage-widget"
version = "0.1.0"
edition = "2024"
description = "Always-on-top, see-through-glass Windows desktop widget showing real Claude 5h/7d usage."
authors = ["Ozgur Oz"]
license = "MIT"

[[bin]]
name = "claude-usage-widget"
path = "src/main.rs"

[dependencies]
usage-core = { path = "../usage-core", features = ["net"] }
anyhow = "1"
smol = "2"

gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }

raw-window-handle = "0.6"
winreg = "0.55"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

# Release profile is defined once at the workspace root (../../Cargo.toml).

[build-dependencies]
embed-resource = "2"
